feat: Create Login Page feta: Save input on local storage

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/login.css" />
 
-    <title>Rick and Morty Memory Game</title>
+    <script src="./js/login.js" defer></script>
+
+    <title>Rick and Morty | Login</title>
   </head>
   <body>
-    <form class="login-form">
+    <form class="login-form" id="form">
       <div class="login__header">
         <img width="300" src="./images/cerebro.jpg" alt="brain icon" />
         <h1>Memory Game</h1>
