--- a/pages/game.html
+++ b/pages/game.html
@@ -3,9 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/game.css" />
+
+    <script src="../js/game.js" defer></script>
+
     <title>Memory Game | Game</title>
   </head>
   <body>
-    Game page
+    <main>
+      <header>
+        <span class="player"></span>
+        <span
+          >Time:
+          <span class="timer">00</span>
+        </span>
+      </header>
+
+      <div class="grid"></div>
+    </main>
   </body>
 </html>
